--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
          <div class="hello"><div class="present"><h1>Hello, I'm <i id="start">oFunkie.</h1></div>
          
-            <div class="underlinehello"><p>French artist, developer and comedian.</i></p></div>
+            <div class="underlinehello"><p>Young French developer.</i></p></div>
 
             <a href="#ma-bio"><img class="arrow" src="arrow.png" id="scrollBtn"></a>
 
