--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
       <div class="containerbio">
 
-          Hello, my name's <i>Aurelien Barbarant</i>, I live in France. I'm interested in programing, and in art.&nbsp;
-         I'm a student in theater, I acted since 7 years, in club or conservatory.&nbsp;
-         I learned many languages like <i>C,  python,  html,  css,  lua,  JavaScript</i> and soon <i>C#</i>.&nbsp;
-         I am also a minecraft builder, you will see my build on this website.
+          Hello, my name's <i>Aurelien Barbarant</i>, I live in France. I'm interested in programing, in network architecture and in cybersecurity.&nbsp;
+         I'm a student in highschool, I start basic programming on scratch at 9 years old, on my computer.&nbsp;
+         I learned many languages like <i>C,  python,  html,  css,  lua,  node...&nbsp;
+         I am also really interested in OSINT, i made many tools for this particular activity (web scrapping, backdoor...)
       
       </section>   
 
