--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div class="containerbio">
 
-         Hello, my name is <i>Aurelien Barbarant</i>, and I reside in <b>France</b>. I have a keen interest in programming, network architecture, and cybersecurity. I am currently a high school student.<br><br>
+         Hello, my name is <i>Aurelien Barbarant</i>, I reside in France and I have a keen interest in programming, network architecture, and cybersecurity. I am currently a high school student.<br><br>
 
          My journey in programming began at the age of 9, starting with basic programming in Scratch on my computer. Over the years, I have explored and gained proficiency in various programming languages like <i>C / C++, Python, HTML, CSS, Node.js</i>.<br><br>
          
