--- a/cinema.html
+++ b/cinema.html
@@ -19,8 +19,9 @@
                     <a href="#"><b>Projets</b></a>
                     <div id="projectsList" class="hidden">
                         <ul>
-                            <li><a href="cinema.html">Cinéma</a></li>
                             <li><a href="cyber.html">Cybersécurité</b></a></li>
+
+                            <li><a href="cinema.html">Cinéma</a></li>
                         </ul>
                     </div>
                 </div>
@@ -47,6 +48,10 @@
             <li><a href="#personnages">Personnages</b></a></li>
             <li><a href="#realisations">Réalisation</b></a></li>
             <li><a href="#bilan">Bilan</b></a></li>
+            <li><a href="#bilan-tournage">Bilan de tournage</b></a></li>
+            <li><a href="#points-satisfaction">Points de satisfaction</b></a></li>
+            <li><a href="#points-amelioration">Points d'amélioration</b></a></li>
+
         </ul>
     </div>
     <section class="theme" id="theme">
@@ -337,6 +342,75 @@
             </div>
         </div>
     </section>
+    <section class="bilan-tournage" id="bilan-tournage">
+        <div class="main-words">
+            <div class="word">
+                BILAN DE<br>TOURNAGE
+            </div>
+            <div class="description">
+                En tant que réalisateur de notre film “Réminiscences", j'ai été chargé d'une grande variété de tâches. 
+                L'une des responsabilités les plus importantes était de diriger les acteurs, en leur communiquant ma 
+                vision du film et les émotions, actions et expressions que je désirais. Bien sûr, j'ai également accordé 
+                une certaine liberté aux acteurs, étant donné qu'ils n'étaient pas des professionnels, et pour maintenir 
+                une ambiance chaleureuse. Les comédiens étaient donc encouragés à improviser s'ils le souhaitaient. 
+                Ainsi, j'ai dirigé trois personnes au total : Marie-Blandine, Violette et Monsieur Monteyne.
+                
+                <br><br>Ensuite, j'ai également supervisé Gaspard, mon cadreur, en lui indiquant les plans que je 
+                souhaitais voir à l'écran. Lui et moi avons collaboré pour déterminer le meilleur cadrage, bien que 
+                nos idées coïncident souvent, ce qui limitait les débats. Cette partie était pour moi la plus artistique, 
+                d'autant plus que le film était entièrement tourné en split-screen.
+
+                <br><br>La communication entre nous était fluide, et chacun était là pour aider en cas de question ou de problème. 
+                Notre synergie en tant qu'équipe de cinq membres a été exceptionnelle. De plus, l'intervenant Sébastien Théo nous a 
+                été d'une grande aide. Enfin, j'ai également supervisé l'éclairage, crucial pour créer le contraste entre le passé et 
+                le présent dans le film.
+                Je tiens donc à remercier mon équipe pour ces deux belles journées de tournage, où le travail s'est mêlé au plaisir.
+                
+                <br><br>Nous étions équipés d’une caméra, d’une mandarine, d’un panneau LED, d’une perche et de son enregistreur, 
+                et de plusieurs enrouleurs. Je suis assez content, puisque j’ai pu toucher à tous ces objets d’une grande importance 
+                sur un tournage. 
+
+                <br><br>L’organisation de tournage a été réalisée par Eloane (scripte), Linelle (Assistante-réalisateur) et moi-même. 
+                Linelle gérait surtout le temps, elle était très à cheval sur les horaires, tandis qu’ Eloane, gérait l’ordre des plans 
+                et nous rappelait nos réflexions pré-tournage. J’ai été assez impressionné par notre organisation, puisque nous avons pu 
+                tourner tous les plans sans la moindre minute de retard, ce qui est assez rare sur un tournage.
+
+            </div>
+        </div>
+    </section>
+    <section class="points-satisfaction" id="points-satisfaction">
+        <div class="main-words2">
+            <div class="description2">
+                J'ai été très fier du déroulement du tournage, comme mentionné précédemment en ce qui concerne l'organisation minutieuse 
+                qui nous a permis de gagner du temps et d'ajouter quelques plans supplémentaires.
+
+                <br><br>Je suis également resté impressionné par la beauté de certains plans, en particulier celui où l'on voit la 
+                main de Louise, la mère décédée d'Heliora. La lumière chaude se reflétait sur les veines bleuâtres et pâles de la main, 
+                créant une scène artistique remarquable. Je considère que c'est l'un des plus beaux plans que nous ayons tournés.
+
+                <br><br> Par ailleurs, j'ai été agréablement surpris par le jeu de notre actrice Violette Delval, malgré son jeune âge, 
+                elle a su répondre à toutes nos demandes. Elle a su exprimer une large palette d'émotions, particulièrement dans la dernière 
+                scène où elle devait être triste. Je suis très fier d'elle. Enfin, je suis satisfait de l'ambiance qui régnait sur le plateau. 
+                Tout le travail nécessaire a été accompli, et nous avons même pu nous permettre de rire ensemble.
+            </div>
+            <div class="word2">
+                POINTS<br>DE SATISFACTION
+            </div>
+        </div>
+    </section>
+    <section class="points-amelioration" id="points-amelioration">
+        <div class="main-words">
+            <div class="word">
+                POINTS<br>D'AMÉLIORATION
+            </div>
+            <div class="description">
+                Il y a eu quelques soucis de communication avec les acteurs, comme des informations transmises trop tardivement ou mal transmises. 
+                Mais dans l'ensemble l'organisation était plus que correct
+
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="footer-left">
             © 2023, Aurélien Barbarant
