--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>oFunkie</title>
     <link rel="icon" type="image/png" href="">
     <link href="portfolio.css" rel="stylesheet">
+    <script>
+    window.location.href = "https://aurelien-b.fr";
+    </script>
 </head>
 
 <body>
